unpackaged/main/default/objects/Case_QA__c/Case_QA__c.object-meta.xml
<CustomObject>
    <description>This object will store the records for all the assessments done on case records. Since multiple assessments can be done on single case records which leads to a one to many relationship hence this object is created.</description>
    <label>Case QA</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>CaseQA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case QAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>