unpackaged/main/default/objects/Case_QA__c/fields/Case_QA_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_QA_Notes__c</fullName>
    <description>This field is used to store the response of the Case QA</description>
    <label>Case QA Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>