unpackaged/main/default/objects/Case_QA__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field will look up to case for which case assessment is currently being done.</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case QAs</relationshipLabel>
    <relationshipName>Case_QAs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>