unpackaged/main/default/objects/Case_QA__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>This field will help to determine the overall result of the case qa i.e. Pass/Fail</description>
    <label>Result</label>
    <length>20</length>
    <type>Text</type>
</CustomField>