unpackaged/main/default/objects/Case_QA__c/fields/Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Score_Percentage__c</fullName>
    <description>This field will help determining the overall percentage of the case QA score</description>
    <label>Case QA%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>